@@ -6,9 +6,9 @@ Tommy Shi and Justin Teo
 
 ## Execution
 1. Download the jar file wiki_speak.jar and flickr-api-keys.txt, and move them to your desired working directory
-2. Execute the application by opening the working directory in terminal and execute the command: java -jar wiki_speak.jar
+2. Execute the application by opening the working directory in terminal and run the run.sh script or execute the command: PATH=/home/student/Downloads/openjdk-13_linux-x64_bin/jdk-13/bin:$PATH
+java --module-path /home/student/Downloads/openjfx-13-rc+2_linux-x64_bin-sdk/javafx-sdk-13/lib --add-modules javafx.base,javafx.controls,javafx.media,javafx.graphics,javafx.fxml -jar wiki_speak.jar
 3. Once executed, a /creations folder will be created to store all the created creation
 
 ## Environment
 Please execute the application in the new SOFTENG 206 Virtual Box Image
-
